Fix Warner quarter alignment in provider aggregations

--- a/index.html
+++ b/index.html
@@ -1608,20 +1608,36 @@
             const quartersSet = new Set();
             const provMap = new Map();
             const totals = new Map();
+            const quarterDateMap = new Map();
             for (const r of data) {
                 const q = r.quarter || 'Unknown';
                 quartersSet.add(q);
                 const prov = r.provider || 'Unknown';
                 if (!provMap.has(prov)) provMap.set(prov, new Map());
                 const qm = provMap.get(prov);
-                qm.set(q, (qm.get(q) || 0) + (r.amount || 0));
-                totals.set(prov, (totals.get(prov) || 0) + (r.amount || 0));
+                qm.set(q, (qm.get(q) || 0) + (Number.isFinite(r.amount) ? r.amount : 0));
+                totals.set(prov, (totals.get(prov) || 0) + (Number.isFinite(r.amount) ? r.amount : 0));
+                if (r.quarter && r.quarterDate instanceof Date && !isNaN(r.quarterDate)) {
+                    if (!quarterDateMap.has(r.quarter)) quarterDateMap.set(r.quarter, r.quarterDate);
+                }
             }
-            const quarterDates = {};
-            for (const r of data) {
-                if (r.quarter && r.quarterDate) quarterDates[r.quarter] = r.quarterDate;
-            }
-            const quarters = Array.from(quartersSet).sort((a, b) => (quarterDates[a] || 0) - (quarterDates[b] || 0));
+            const toSortValue = (label) => {
+                const stored = quarterDateMap.get(label);
+                if (stored instanceof Date && !isNaN(stored)) return stored.getTime();
+                const parts = parseQuarterParts(label);
+                if (parts) {
+                    return new Date(parts.year, (parts.quarter - 1) * 3, 1).getTime();
+                }
+                return Number.MAX_SAFE_INTEGER;
+            };
+            const quarters = Array.from(quartersSet).sort((a, b) => toSortValue(a) - toSortValue(b));
+            const quarterDates = quarters.map(label => {
+                const stored = quarterDateMap.get(label);
+                if (stored instanceof Date && !isNaN(stored)) return stored;
+                const parts = parseQuarterParts(label);
+                if (parts) return new Date(parts.year, (parts.quarter - 1) * 3, 1);
+                return null;
+            });
             const providers = Array.from(provMap.keys()).sort((a, b) => (totals.get(b) || 0) - (totals.get(a) || 0));
             const series = providers.map(prov => {
                 const qm = provMap.get(prov);
@@ -1634,6 +1650,7 @@
             });
             providerAggregationCache = {
                 quarters,
+                quarterDates,
                 series,
                 providers
             };
@@ -1651,10 +1668,14 @@
             }
             const chartType = tsChartTypeEl ? tsChartTypeEl.value : 'stacked';
             const hideOther = !!(tsHideOtherEl && tsHideOtherEl.checked);
-            const quartersDates = agg.quarters.map(q => {
-                const any = normalized.find(r => r.quarter === q && r.quarterDate);
-                return any ? any.quarterDate : new Date(q.split('-')[0], 0, 1);
-            });
+            const quartersDates = (Array.isArray(agg.quarterDates) && agg.quarterDates.length === agg.quarters.length)
+                ? agg.quarterDates
+                : agg.quarters.map(q => {
+                    const any = normalized.find(r => r.quarter === q && r.quarterDate instanceof Date && !isNaN(r.quarterDate));
+                    if (any) return any.quarterDate;
+                    const parts = parseQuarterParts(q);
+                    return parts ? new Date(parts.year, (parts.quarter - 1) * 3, 1) : null;
+                });
             const palette = ['#4A90E2', '#50E3C2', '#AAB4C2', '#E94E3D', '#7A8A9F'];
             const fillPalette = ['rgba(74,144,226,0.45)', 'rgba(80,227,194,0.45)', 'rgba(170,180,194,0.45)', 'rgba(233,78,61,0.45)', 'rgba(122,138,159,0.45)'];
             const traces = [];
@@ -1750,10 +1771,14 @@
             }
             const chartType = cumChartTypeEl ? cumChartTypeEl.value : 'stacked';
             const hideOther = !!(cumHideOtherEl && cumHideOtherEl.checked);
-            const quartersDates = agg.quarters.map(q => {
-                const any = normalized.find(r => r.quarter === q && r.quarterDate);
-                return any ? any.quarterDate : new Date(q.split('-')[0], 0, 1);
-            });
+            const quartersDates = (Array.isArray(agg.quarterDates) && agg.quarterDates.length === agg.quarters.length)
+                ? agg.quarterDates
+                : agg.quarters.map(q => {
+                    const any = normalized.find(r => r.quarter === q && r.quarterDate instanceof Date && !isNaN(r.quarterDate));
+                    if (any) return any.quarterDate;
+                    const parts = parseQuarterParts(q);
+                    return parts ? new Date(parts.year, (parts.quarter - 1) * 3, 1) : null;
+                });
             const palette = ['#4A90E2', '#50E3C2', '#AAB4C2', '#E94E3D', '#7A8A9F'];
             const fillPalette = ['rgba(74,144,226,0.45)', 'rgba(80,227,194,0.45)', 'rgba(170,180,194,0.45)', 'rgba(233,78,61,0.45)', 'rgba(122,138,159,0.45)'];
             const cumSeries = agg.series.map(s => {
